cleaning, adding tests
